--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,10 @@
 /* Configuración de tailwind
 */
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 
 /* Configuración para todo el layout de la pagina
  */
