--- a/app/page.module.css
+++ b/app/page.module.css
@@ -2,12 +2,13 @@
   position: relative;
   width: 100vw;
   height: 100vh;
-  background-color: green;
+  background-color: #259780;
 }
 
 .login {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   position: absolute;
   right: 0;
   background-color: white;
@@ -32,6 +33,7 @@
 
 .logo p {
   font-size: 0.77rem;
+  color: #222;
   text-align: center;
 }
 
@@ -47,4 +49,13 @@
   justify-content: center;
   align-items: center;
   margin-top: 1rem;
+  background-color: #f95e21;
+  padding: 0.3rem 0.8rem;
+  border-radius: 2px;
+  color: white;
+  font-size: 0.85rem;
+}
+
+.button:hover {
+  background-color: #fa682e;
 }
