--- a/app/page.module.css
+++ b/app/page.module.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 100vw;
   height: 100vh;
-  background-color: #259780;
+  background-color: #973225;
 }
 
 .login {
@@ -12,9 +12,13 @@
   position: absolute;
   right: 0;
   background-color: white;
-  width: 25%;
+  width: 375px;
   height: 100%;
   padding: 2rem;
+
+  @media(min-width: 768px) {
+    width: 350px;
+  }
 }
 
 .logo {
@@ -48,10 +52,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 1rem;
+  margin-top: .5rem;
   background-color: #f95e21;
-  padding: 0.3rem 0.8rem;
-  border-radius: 2px;
+  padding: 0.4rem 0.8rem;
+  border-radius: 3px;
   color: white;
   font-size: 0.85rem;
 }
