--- a/components/header/header.css
+++ b/components/header/header.css
@@ -1,11 +1,17 @@
 .header {
+  position: relative;
+  background-color: #fff;
   display: flex;
   align-items: center;
   gap: 1rem;
   padding: 1rem;
-  width: 84%;
+  width: 100%;
   height: 8%;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 12px 0px;
+}
+
+.header > :nth-child(3) {
+  margin-left: auto;
 }
 
 .content-burger__menu {
