--- a/components/sidebar/sidebar.css
+++ b/components/sidebar/sidebar.css
@@ -1,5 +1,16 @@
 .sidebar {
   background-color: #259780;
-  width: 16%;
+  /* background-color: #ffc0a7; */
+  width: 18%;
   height: 100%;
+  padding: 2px;
+  scrollbar-width: none;
+  box-sizing: border-box;
+}
+
+.span {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  margin-left: 5px;
 }
