--- a/components/sidebar/sidebar.css
+++ b/components/sidebar/sidebar.css
@@ -1,6 +1,5 @@
 .sidebar {
   background-color: #1a7563;
-  /* background-color: #ffc0a7; */
   width: 18%;
   height: 100%;
   padding: 2px;
@@ -13,5 +12,6 @@
   gap: 4px;
   align-items: center;
   text-align: center;
+  text-transform: uppercase;
   /* margin-left: 2px; */
 }
